--- a/.github/workflows/manual-docker-image.yml
+++ b/.github/workflows/manual-docker-image.yml
@@ -16,6 +16,14 @@ jobs: # job name
       - name: take keepalived version
         run: |
           echo "KEEPALIVED_VERSION=$(docker run --rm docker.io/alpine:${ALPINE_VERSION} /bin/sh -c 'apk update -q && apk add keepalived -q && apk info keepalived | head -n 1' | sed -e 's/[^-]*-\(.*\) [^ ]*/\1/' )" >> $GITHUB_ENV
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+        with:
+          platforms: 'lunux/amd64,linux/arm64,linux/arm/v7'
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
+        with:
+          platforms: 'lunux/amd64,linux/arm64,linux/arm/v7'
       - name: docker login
         uses: docker/login-action@v3
         with:
@@ -27,4 +35,5 @@ jobs: # job name
           context: .
           tags: ${{ env.REPO_NAME }}:${{ env.KEEPALIVED_VERSION }},${{ env.REPO_NAME }}:latest
           build-args: ALPINE_VERSION=${{ env.ALPINE_VERSION }}
+          platforms: linux/arm/v7,linux/arm64,linux/amd64
           push: true
